<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/homeabout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="contact"
        android:text="@string/contact" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="about"
        android:text="@string/about" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="515dp">

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/back"
            android:onClick="back"
            app:srcCompat="@drawable/back"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/reload"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/reload"
            android:onClick="reload"
            app:srcCompat="@drawable/reload"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="169dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:onClick="next"
            app:srcCompat="@drawable/forward"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</LinearLayout>