<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".screen">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="219dp"
        android:layout_height="198dp"
        android:layout_gravity="center|top"
        android:contentDescription="@string/screen"
        app:srcCompat="@drawable/screen" />

    <LinearLayout
        android:layout_width="396dp"
        android:layout_height="415dp"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/nameapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nameApp" />

        <TextView
            android:id="@+id/vergen"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:gravity="center"
            android:text="@string/fergen" />
    </LinearLayout>
</LinearLayout>